@@ -5,9 +5,9 @@ This view is the template for the edit page.
 
 It displays a header, and renders the `_form` partial to do the heavy lifting.
 
-## Instance variables:
+## Local variables:
 
-- `@page`:
+- `page`:
   An instance of [Administrate::Page::Form][1].
   Contains helper methods to help display a form,
   and knows which attributes should be displayed in the resource's form.
@@ -15,11 +15,11 @@ It displays a header, and renders the `_form` partial to do the heavy lifting.
 [1]: http://www.rubydoc.info/gems/administrate/Administrate/Page/Form
 %>
 
-<% content_for(:title) { "Edit #{@page.page_title}" } %>
+<% content_for(:title) { "Edit #{page.page_title}" } %>
 
 <header class="header">
   <h1 class="header-heading"><%= content_for(:title) %></h1>
-  <%= link_to "Show #{@page.resource}", [Administrate::NAMESPACE, @page.resource], class: "button" %>
+  <%= link_to "Show #{page.resource}", [Administrate::NAMESPACE, page.resource], class: "button" %>
 </header>
 
-<%= render "form" %>
+<%= render "form", page: page %>
